--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 # App
 NEXT_PUBLIC_APP_URL=http://localhost:3001
+NEXT_PUBLIC_KAKAO_APP_KEY=
+KAKAO_REST_API_KEY=
 
 # Supabase
 NEXT_PUBLIC_SUPABASE_URL=
